fixes to changelog on mobile/ small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,10 @@ body{
     max-width: 1500px;
     margin-left: 15em;
     margin-right: 15em;
+    @media screen and (max-width: 800px){
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 a{
   color: var(--nav-text-colour);
@@ -50,10 +54,11 @@ a{
     text-align: center;
     color: var(--nav-text-colour);
     @media screen and (max-width: 800px){
-      padding-top: 7em;
+      padding-top: 2em;
       font-size: 1.25em;
       padding-left: 2em;
       padding-right: 2em;
+      padding-bottom: 1em;
     }
     
 }
@@ -263,7 +268,7 @@ a{
     font-size: 1.25em;
     color: var(--nav-text-colour);
     @media screen and (max-width: 800px){
-      padding-top: 7em;
+      padding-top: 1em;
       font-size: 1.25em;
       padding-left: 2em;
       padding-right: 2em;
@@ -278,13 +283,25 @@ hr {
   margin-top: .3em;
   margin: auto;
   align-items: center;
- 
+  @media screen and (max-width: 800px){
+    width: 90%;
+  }
   }
   h2{
     padding-top: .7em;
     font-size: 1em;
+    @media screen and (max-width: 800px){
+      margin-left: 1em;
+      margin-right: 1em;
+    }
   }
   p,h2{
     color: var(--nav-text-colour);
     padding-left: 1em;
+  }
+  p{
+    @media screen and (max-width: 800px){
+      margin-right: 1.5em;
+      margin-left: 1em;
+    }
   }
